--- a/wiki/UserGuide.wiki
+++ b/wiki/UserGuide.wiki
@@ -1,21 +1,30 @@
-#summary Explaining controls
+#summary Explaining the game basics
 #labels Featured
 
 = Introduction =
 
-This wiki page is a user guide. The game is quite simple, but heres a reminder about how it works.
+This wiki page is a user guide. The game is quite simple, but here's a reminder about how it works.
 
 
 = Details =
 
-=Controls=
+==Controls==
 Here are the controls. You can't change them, sorry :
 
-  * UP, DOWN, LEFT, RIGHT keys : Control your snake
-  * SPACE : Pause the game
-  * ESCAPE : Exit the game
-  * F11 : Switch to/from a bigger frame
+  * *UP*, *DOWN*, *LEFT*, *RIGHT* arrows : Control your snake
+  * *SPACE* : Pause the game
+  * *ESCAPE* : Exit the game
+  * *F11* : Switch to/from a bigger frame
 
-=Bonus=
+==Bonus==
 
-  * Grey bonus : A simple bonus that grows your snake from 1
+  * *Grey bonus* : A simple bonus that grows your snake with 1 (there's always one in the board.
+  * *Green bonus* : Appears each 10 points you earn. They stay during 100 moves (approx 5 seconds)and grows your snake with 3
+
+==Other==
+
+  * When you reach a game limit (window border), your snake will continue at the opposite side.
+  * If your snake eats a part of himself, the the game is over.
+
+
+===Have Fun===
